--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^1.1.4",
     "react-stripe-elements": "^1.6.0",
     "react-transition-group": "^2.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
-    "socket.io-client": "^2.1.0"
+    "socket.io-client": "^2.1.1"
   },
   "proxy": "http://localhost:8081",
   "scripts": {
